Making the app PWA

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="KMDB is a movie database that shows movies based on your location includes search feature and you can discover vids + cast and movie info" />
-  <link rel="apple-touch-icon" href="./icon.png" />
-
+  <link rel="apple-touch-icon" href="./images/icons/apple-touch-icon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>KMDB</title>
